@@ -1,6 +1,9 @@
+from Products.CMFCore.utils import getToolByName
 
 def v1_v2(context):
     context.runImportStepFromProfile('profile-collective.quickupload:default',
                                      'jsregistry')
     context.runImportStepFromProfile('profile-collective.quickupload:default',
                                      'cssregistry')
+    getToolByName(context, 'portal_css').cookResources()
+    getToolByName(context, 'portal_javascripts').cookResources()
